# pyproject-template

./: .gitignore  LICENSE  README.md  pyproject.toml
