[tool.poetry]
name = "pyproject-template"
version = "0.1.0"
description = "A template for my Python projects."
authors = ["n8jhj <n8jhj@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
